Fix CSS for no overlap or overflows all the way down to iPhone 4 landscape and portrait

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ p {
 	line-height: 90%;
 }
 
+.col-xs-12 {
+	min-height: 0;
+}
+
 .fine-print {
 	font-size: 0.9em;
 }
@@ -51,17 +55,12 @@ p {
 	text-align: center;
 }
 
-.filters-panel {
-	position: absolute;
-	top: 10px;
-	left: 5%;
-}
-
 .locations-panel {
 	position: absolute;
-	width: 25%;
-	top: 50px;
-	left: 5%;
+	width: 28%;
+	height: 80vh;
+	top: 10px;
+	left: 6%;
 }
 
 .title-panel {
@@ -90,7 +89,7 @@ p {
 
 .filter-label {
 	font-weight: 400;
-	font-size: 1.3em;
+	font-size: 1.2em;
 	padding: 6px 9px;
 	margin-right: 4px;
 	opacity: 0.5;
@@ -103,6 +102,7 @@ p {
 }
 
 .location-details-container {
+	padding: 10px;
 	font-size: 1.3em;
 }
 
@@ -131,7 +131,7 @@ input[type="checkbox"]:checked + .filter-label {
 .search {
 	font-size: 1.3em;
 	margin-bottom: 10px;
-	margin-top: 20px;
+	margin-top: 10px;
 }
 
 .search-input {
@@ -155,7 +155,7 @@ input[type="checkbox"]:checked + .filter-label {
 
 .locations {
 	width: 100%;
-	height: 350px;
+	height: 30%;
 	border-top: 4px;
 }
 
